objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Legacy_ID__c</fullName>
        <label>Activity Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointment_Rating__c</fullName>
        <label>Appointment Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>ATT-HI-RDM</fullName>
                </value>
                <value>
                    <fullName>ATT-MI-RDM</fullName>
                </value>
                <value>
                    <fullName>ATT-NI-RDM</fullName>
                </value>
                <value>
                    <fullName>ATT-HI-NDM</fullName>
                </value>
                <value>
                    <fullName>ATT-MI-NDM</fullName>
                </value>
                <value>
                    <fullName>ATT-NI-NDM</fullName>
                </value>
                <value>
                    <fullName>NTR</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Opened_DT__c</fullName>
        <label>Email  Opened DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Opened_Date__c</fullName>
        <label>Email Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Not Held</fullName>
                </value>
                <value>
                    <fullName>Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MGR_Email__c</fullName>
        <label>MGR_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MH_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration Trigger Do not remove</description>
        <inlineHelpText>Checking this box means this activity will show up on any blue sheet</inlineHelpText>
        <label>MH Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_of_One_Completed_Task__c</fullName>
        <formula>IF( IsClosed,1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One Completed - Task</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_One_Task2__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Power of One - Task</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Power_of_One_Task__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One - Task</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used by Inside Sales</inlineHelpText>
        <label>Qualified Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sprint_Master_Name__c</fullName>
        <label>Sprint Master Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Sprint Tasks</relationshipLabel>
        <relationshipName>Sprint</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Category__c</fullName>
        <label>Task Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Drop in</fullName>
                </value>
                <value>
                    <fullName>Connect Social Media/Research</fullName>
                </value>
                <value>
                    <fullName>Promotional item</fullName>
                </value>
                <value>
                    <fullName>Sales Call Requested</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Other Task</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Research/Engage</fullName>
                    <isActive>false</isActive>
                    <label>Research/Engage</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhoIDType__c</fullName>
        <formula>case(left(WhoId,3),'00Q','Lead','003', 'Contact','')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WhoIDType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mh_Completion_Date__c</fullName>
        <description>SAM Integration Best Action Completion Date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Sheet_Section__c</fullName>
        <description>SAM Sheet Section Information Gold Sheet and Blue Sheet Best Actions</description>
        <label>Sheet Section</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team's Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>